# OnyxVO

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  onyxvo_benchmark_baseline.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/onyxvo/app/: PreprocessingValidationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xfeat_fp32.onnx  xfeat_int8.onnx
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  pipeline.cpp  pipeline.h
app/src/main/cpp/cmake/: spv_to_header.cmake
app/src/main/cpp/feature/: xfeat_extractor.cpp  xfeat_extractor.h
app/src/main/cpp/matching/: cpu_matcher.cpp  cpu_matcher.h  gpu_matcher.cpp  gpu_matcher.h
app/src/main/cpp/matching/shaders/: match_descriptors.comp
app/src/main/cpp/patches/: kompute-ndk25-compat.patch
app/src/main/cpp/preprocessing/: neon_ops.cpp  neon_ops.h
app/src/main/cpp/utils/: android_log.h  timer.h  trace.h
app/src/main/cpp/vo/: pose_estimator.cpp  pose_estimator.h  trajectory.cpp  trajectory.h
app/src/main/java/com/onyxvo/app/: BenchmarkRunner.kt  CameraManager.kt  KeypointOverlayView.kt  MainActivity.kt  NativeBridge.kt  PerformanceDashboardView.kt  TrajectoryView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
scripts/: capture_demo.sh  export_xfeat_onnx.py  optimize_onnx.py  quantize_xfeat.py  requirements.txt
